fixing spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,18 @@ header {
     top:0;
     z-index: 1;
 }
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
 img {
     width: 100%;
@@ -272,6 +284,9 @@ a.logo:hover {
     nav ul{
         margin: 0;
     }
+    [class*="col-"]{
+        width:auto;
+    }
     
 }
 /* medium device size */
@@ -316,7 +331,9 @@ a.logo:hover {
         float: left;
         padding: 1vh 4vw;
         position: relative;
- 
+    }
+    .col-7, .col-5{
+        width:auto;
     }
     .col-6 h3{
         margin-top: 1vh;
