--- a/css/velastyles.css
+++ b/css/velastyles.css
@@ -1,4 +1,4 @@
-/* general css */
+/* || general css */
 :root {
     --off-white: #FFFAF1;
     --black: #351B00;
@@ -69,6 +69,12 @@ main {
     padding: 1% 4vw;
     border-radius: 25px;
 }
+.grid{
+    display: grid;
+}
+.space-under{
+    margin-bottom: 6vh;
+}
 
 img[src*="arrow-transition"] {
     width: 83.001px;
@@ -88,7 +94,7 @@ img[src*="arrow-transition"] {
     display: inline-flex;
 
 }
-/* competitive research */
+/* || competitive research */
 img[src*="windy-app-icon"] {
     width: 6rem;
     height: 6rem;
@@ -150,7 +156,7 @@ background-color: #FF8D4F;;
 
 }
 
-/* user interviews */
+/* || user interviews */
 .goal {
     width: 100%;
     height: 100%;
@@ -162,7 +168,11 @@ background-color: #FF8D4F;;
     gap: 16px;
     display: inline-flex;
 }
-
+.flex-goals{
+    display:flex;
+    flex-direction: column;
+    gap: 2vh;
+}
 .goal-one {
     background: rgba(0, 80, 125, 0.13)
 }
@@ -178,8 +188,27 @@ background-color: #FF8D4F;;
 .goal-four {
     background: rgba(0, 80, 125, 0.46);
 }
+.ellipse-jim{
+    background-color: #ADE4BC;
+    border-radius: 9999px;
+    height: 50px;
+    width: 50px;
+    display: block;
+    position: relative;
+}
+.jim-quote{
+    position:absolute;
+    z-index: 0;
+    padding: 2vh 2vw;
+    top:0;
+    margin-left: 8vw;
+    
+}
+.goal-box{
+    position: relative;
+}
 
-/* small screen size */
+/* || small screen size */
 @media only screen and (max-width: 639px) {
     .ellipse {
         height: 80px;
@@ -242,7 +271,7 @@ background-color: #FF8D4F;;
     }
 }
 
-/* medium width size */
+/* || medium width size */
 @media only screen and (min-width: 640px) {
     main{
         margin: 1vh 3vw;
@@ -289,12 +318,29 @@ background-color: #FF8D4F;;
         box-sizing: content-box;
         padding: 0 0 4vh 0;
     }
+    [class*="col-"]{
+        float: left;
+        padding: 2vh 2vw;
+        position: relative;
+    }
 }
 
-/* large screen size */
+/* || large screen size */
 @media only screen and (min-width: 1024px) {
     main > * {
         margin: 10vh 5vw;
+    }
+    /* #introduction .col-6{
+        width: auto;
+    } */
+     #understand .col-6{
+        width: 50%;
+     }
+    .col-4{
+        width: 33.33%;
+    }
+    .col-8{
+        width: 66.66%;
     }
 
     .ellipse>img {
